--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /*  your css code here. If applicable */
+
+body{
+			margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+         	background-color: #f0f0f0;
+}
+
+#box {
+	 width: 200px;
+            height: 200px;
+            background-color: lightblue;
+            border: 2px solid black;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+}
+#box h1 {
+            color: purple;
+            font-size: 18px;
+            font-weight: bold;
+        }
